# walter-osc-ros2-bazel

./: .bazelrc  .gitignore  LICENSE  MODULE.bazel  README.md
config/walter_sr/: base_bad_stairs_climbing.yaml  forward_velocity_front_tumbling.yaml  forward_velocity_front_tumbling2.yaml  pd_tumbling.yaml  stairclimbing_slightlybetter.yaml  torso_tumbling_fail.yaml  true_tumbling_mjjoint.yaml
operational-space-control/walter_sr/: BUILD.bazel  operational_space_controller.h
operational-space-control/walter_sr/autogen/: autogen.py
