load("@com_github_mvukov_rules_ros2//ros2:cc_defs.bzl", "ros2_cpp_library")

ros2_cpp_library(
    name = "operational_space_controller",
    srcs = ["operational_space_controller.h"],
    deps = [
        ":aliases",
        ":constants",
        ":containers",
        ":utilities",
        "//operational-space-control:utilities",
        "//operational-space-control/walter_sr/autogen:autogen_functions_cc",
        "//operational-space-control/walter_sr/autogen:autogen_defines_cc",
        "@mujoco-bazel//:mujoco",
        "@eigen//:eigen",
        "@osqp-cpp//:osqp++",
        "@osqp//:osqp",
        "@ros2_rclcpp//:rclcpp",
        "@abseil-cpp//absl/log:absl_check",
        "@abseil-cpp//absl/status:status",
    ],
    visibility = ["//visibility:public"],
)